# serverless-cloud-platform

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
backend/: Dockerfile
backend/app/: dispatcher.py  main.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/domain/: __init__.py  enums.py
backend/app/models/: __init__.py  base.py  dispatch.py  function.py  invocation.py  user.py  worker.py
backend/app/schemas/: auth.py  function.py  invocation.py  metrics.py  worker.py
backend/app/services/: auth.py  dispatch_outbox.py  function_registry.py  invocation_queue.py  invocations.py  metrics.py  rate_limiter.py  retry_policy.py  storage.py
backend/migrations/: README.md  env.py
backend/migrations/versions/: 20260611_0001_create_core_schema.py  20260710_0002_add_invocation_outbox.py  20260712_0003_add_worker_consumer_identity.py
benchmarks/: README.md  __init__.py  aggregate_scaling_results.py  run_benchmark.py  run_release_suite.py
benchmarks/results/: latest.json  noop-100x10.json  sleep-100x10.json
benchmarks/workloads/cpu_bound/: main.py
benchmarks/workloads/failing/: main.py
benchmarks/workloads/infinite_loop/: main.py
benchmarks/workloads/memory_heavy/: main.py
benchmarks/workloads/sleep/: main.py
docs/: benchmark-noop-100x10.md  benchmark-release-report.md  benchmark-report-template.md  benchmark-report.md  benchmark-sleep-100x10.md  benchmark-worker-scaling-report.md  design.md  development-plan.md  engineering-walkthrough.md  git-commit-guidelines.md  threat-model.md
examples/hello/: function.json  main.py
frontend/: Dockerfile  README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: AuthPage.tsx  FunctionsPage.tsx  InvocationDetailPage.tsx  (+2 more)
infra/: README.md
requirements/: constraints.txt
runtime/: README.md
runtime/python311/: Dockerfile  runner.py
scripts/: README.md  demo_invoke.sh
tests/: README.md  conftest.py
tests/e2e/: test_compose_workflows.py
tests/failure_injection/: test_worker_crash_recovery.py
tests/integration/: test_postgres_redis.py  test_runtime_container.py
tests/unit/: test_api_health.py  test_auth_api.py  test_benchmark_runner.py  test_docker_runtime_executor.py  test_function_registry_api.py  test_invocation_api.py  test_invocation_dispatcher.py  test_metrics_api.py  test_models_metadata.py  test_rate_limiter.py  test_release_benchmark_runner.py  test_runtime_runner.py  test_scaling_benchmark_aggregator.py  test_worker_consumer.py  test_worker_heartbeat.py  test_worker_main.py  test_worker_recovery.py  test_worker_retry_policy.py
worker/: Dockerfile  README.md
worker/app/: main.py
(+41 files in other folders)
